--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <!-- Web App Capability Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Habit Tracker" />
     
